<resources>
    <string name="activity_credits_title">Credits</string>
    <string name="activity_main_title">Performance Monitor</string>
    <string name="activity_readings_title">Raw data</string>
    <string name="activity_settings_title">AA Torque Settings</string>
    <string name="activity_stopwatch_title">Stopwatch</string>
    <string name="app_car_service_name">AA Torque</string>
    <string name="app_name">AA Torque</string>
    <string name="credits_author">Based on the app made by:</string>
    <string name="credits_basedon">Based on the SDK and demo App by:</string>
    <string name="credits_drivesafely">Drive Safely.</string>
    <string name="credits_thanks">Special thanks to:</string>
    <string name="element_EcoHMI_Score.AvgShort">Eco score</string>
    <string name="element_EcoHMI_Score.AvgTrip">Eco score average</string>
    <string name="element_VIN">VIN</string>
    <string name="element_absChargingAirPressure">Turbo charge pressure (absolute)</string>
    <string name="element_acceleratorPosition">Accelerator position</string>
    <string name="element_batteryVoltage">Battery voltage</string>
    <string name="element_blinkingState">Blinking state</string>
    <string name="element_brakePressure">Brake Pressure</string>
    <string name="element_coolantTemperature">Coolant temperature</string>
    <string name="element_currentConsumptionPrimary">Current consumption, primary fuel</string>
    <string name="element_currentConsumptionSecondary">Current consumption, secondary fuel</string>
    <string name="element_currentGear">Current gear</string>
    <string name="element_currentOutputPower">Output power</string>
    <string name="element_currentTorque">Torque</string>
    <string name="element_cycleConsumptionPrimary">Cycle consumption, primary fuel</string>
    <string name="element_cycleConsumptionSecondary">Cycle consumption, secondary fuel</string>
    <string name="element_engineSpeed">RPM</string>
    <string name="element_gearboxOilTemperature">Gearbox</string>
    <string name="element_lateralAcceleration">Lateral G\'s</string>
    <string name="element_longitudinalAcceleration">Longitudinal G\'s</string>
    <string name="element_navAltitude">Altitude</string>
    <string name="element_navHeading">Heading</string>
    <string name="element_navLatitude">GPS latitude</string>
    <string name="element_navLongitude">GPS longitude</string>
    <string name="element_none">None</string>
    <string name="element_odometer">Odometer</string>
    <string name="element_oilTemperature">Oil temperature</string>
    <string name="element_outsideTemperature">Outside temperature</string>
    <string name="element_powermeter">Hybrid power</string>
    <string name="element_relChargingAirPressure">Turbo charge pressure (relative)</string>
    <string name="element_soundVolume">Sound volume</string>
    <string name="element_tankLevelPrimary">Tank level (primary)</string>
    <string name="element_tankLevelSecondary">Tank level (secondary)</string>
    <string name="element_test">Simulate readings from Torque</string>
    <string name="element_tyreStateFL">Tyrestate front left</string>
    <string name="element_tyreStateFR">Tyrestate front right</string>
    <string name="element_tyreStateRL">Tyrestate rear left</string>
    <string name="element_tyreStateRR">Tyrestate rear right</string>
    <string name="element_tyrePressureFL">Tyrepressure front left</string>
    <string name="element_tyrePressureFR">Tyrepressure front right</string>
    <string name="element_tyrePressureRL">Tyrepressure rear left</string>
    <string name="element_tyrePressureRR">Tyrepressure rear right</string>
    <string name="element_tyreTemperatureFL">Tyre temperature front left</string>
    <string name="element_tyreTemperatureFR">Tyre temperature front right</string>
    <string name="element_tyreTemperatureRL">Tyre temperature rear left</string>
    <string name="element_tyreTemperatureRR">Tyre temperature rear right</string>
    <string name="element_vehicleSpeed">Speed</string>
    <string name="element_wheelAngle">Wheel angle</string>
    <string name="element_wheel">Wheel</string>
    <string name="element_world">World</string>
    <string name="element_yawRate">Yaw rate</string>
    <string name="element_shortTermConsumptionPrimary">Short Term Consumption (primary fuel)</string>
    <string name="element_shortTermConsumptionSecondary">Short Term Consumption (secondary fuel)</string>
    <string name="element_cac">Charger Air cooler</string>
    <string name="element_distance">Distance</string>
    <string name="element_ecoaverage">Eco Average</string>
    <string name="element_eco">Eco</string>
    <string name="exhaust">Exhaust</string>
    <string name="element_fuel_primary">Fuel Primary</string>
    <string name="element_fuel_secondary">Fuel Secondary</string>
    <string name="element_measurement">Measurement</string>
    <string name="element_motherboard">Motherboard</string>
    <string name="element_obd2">OBD2</string>
    <string name="element_pedal">Pedal</string>
    <string name="element_radio">Radio</string>
    <string name="element_wrench">Wrench</string>
    <string name="element_tire">Tire</string>
    <string name="font_audi" translatable="false">Audi Virtual Cockpit</string>
    <string name="font_frutiger" translatable="false">Frutiger</string>
    <string name="font_larabie" translatable="false">Larabie</string>
    <string name="font_seat" translatable="false">Seat Metastyle</string>
    <string name="font_segments" translatable="false">7 segment display</string>
    <string name="font_skoda" translatable="false">Skoda</string>
    <string name="font_vw" translatable="false">Volkswagen CarUI</string>
    <string name="font_vw2" translatable="false">Volkswagen Thesis</string>
    <string name="font_vw3" translatable="false">VW Digit</string>
    <string name="kick_uploads_done">Uploads scheduled.</string>
    <string name="kick_uploads_nothing_to_do">All uploads already completed.</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_bigquery_dataset_title">Dataset name</string>
    <string name="pref_bigquery_project_id_title">Project ID</string>
    <string name="pref_bigquery_reupload_all_title">Re-upload all log files</string>
    <string name="pref_bigquery_reupload_last_title">Re-upload last log file</string>
    <string name="pref_bigquery_table_default" translatable="false">mqbstats</string>
    <string name="pref_bigquery_table_title">Table name</string>
    <string name="pref_choose_account_title">Choose account</string>
    <string name="pref_font">Font</string>
    <string name="pref_highlow">Highest values</string>
    <string name="pref_highlow_off">Do not show max values</string>
    <string name="pref_highlow_on">Show max values for each gauge</string>
    <string name="pref_highlowmarks">Mark highest values on the gauge</string>
    <string name="pref_highlowmarks_off">A max mark is not shown on the gauge</string>
    <string name="pref_highlowmarks_on">A max mark is shown on the gauge</string>
    <string name="pref_highvis">High visibility dial</string>
    <string name="pref_highvis_off">Display a needle on the gauge</string>
    <string name="pref_highvis_on">Display a highly visible ray instead of a needle</string>
    <string name="pref_kick_uploads_title">Upload data now</string>
    <string name="pref_list_providers_title">List providers</string>
    <string name="pref_logging_category_title">Logging</string>
    <string name="pref_notifications_category_title">Notifications</string>
    <string name="pref_oil_temp_monitoring_summary">Show notification when engine oil reaches working temperature.</string>
    <string name="pref_oil_temp_monitoring_title">Monitor oil temperature</string>
    <string name="pref_omit_empty_readings_summary">Omit empty values in Raw data view</string>
    <string name="pref_omit_empty_readings_summary_off">Show empty values in Raw data view</string>
    <string name="pref_omit_empty_readings_title">Omit empty values</string>
    <string name="pref_pressureunit">Pressure unit</string>
    <string name="pref_providers_category_title">Telemetry providers</string>
    <string name="pref_stats_logging_summary">Logs folder: %1$s</string>
    <string name="pref_stats_logging_title">Log car telemetry</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_ticks">Tick values</string>
    <string name="pref_ticks_off">Don\'t display value of ticks</string>
    <string name="pref_ticks_on">Display value of ticks</string>
    <string name="pref_upload_to_bigquery_title">Upload logs to BigQuery</string>
    <string name="pref_wheel_state_monitoring_summary">Generates a beep when during reverse-gear maneuvers the steering wheel crosses the zero angle.</string>
    <string name="pref_wheel_state_monitoring_title">Beep at zero steering angle</string>
    <string name="pref_cancel_uploads_title">Cancel all uploads</string>
    <string name="unit_bar">bar</string>
    <string name="unit_psi">psi</string>
    <string name="unit_fahrenheit">Fahrenheit</string>
    <string name="unit_celcius">Celcius</string>
    <string name="pref_location_category_title">Location</string>
    <string name="pref_location_showstreet_title">Show street name on Title bar</string>
    <string name="pref_location_showstreet_summary_off">Street name won\'t be shown on left of time clock</string>
    <string name="pref_location_showstreet_summary_on">Street name will be shown on left of time clock</string>
    <string name="pref_location_use_geocoding_summary">Use Location data for your phone if car doesn\'t provide street name</string>
    <string name="pref_location_use_geocoding_title">Use GPS data from your phone</string>
    <string name="pref_location_force_geocoding_title">Force geocoding</string>
    <string name="pref_location_force_geocoding_summary_on">Always use data Locatin your phone, even if car has Nav</string>
    <string name="pref_location_force_geocoding_summary_off">If car has Nav, use his own geocoding</string>
    <string name="pref_location_DataSource">Source Location data from phone</string>
    <string name="pref_temperatureunit">Temperature unit</string>
    <string name="pref_unitprefs">Unit preferences</string>
    <string name="pref_background">Background</string>
    <string name="pref_enginespeed_category_title">Monitor Engine Speed</string>
    <string name="pref_enginespeed_monitor">Enable RPM monitoring</string>
    <string name="pref_enginespeed_rpm_inform">RPM inform</string>
    <string name="pref_enginespeed_rpm_hint">RPM hint</string>
    <string name="pref_enginespeed_rpm_warn">RPM warn</string>
    <string name="pref_enginespeed_play_sound">Play sound</string>
    <string name="pref_enginespeed_play_sound_summary">Play sound when shift is needed</string>
    <string name="pref_enginespeed_play_sound_upto">Play sound up to gear</string>
    <string name="pref_enginespeed_rpm_dialog_title">Engine RPMs</string>
    <string name="pref_accurate_off">Smooth animation on clocks (less accuracy)</string>
    <string name="pref_accurate_on">Accurate values on clock</string>
    <string name="pref_accurate">Accurate clocks (less smooth animation)</string>
    <string name="pref_dataelementsettings_4">Dashboard consumption</string>
    <string name="pref_dataelementsettings_5">Dashboard service</string>
    <string name="pref_fuel_tank_size">Fuel tank size</string>
    <string name="pref_enable_4nd_dash">Enable dashboard conspumtion</string>
    <string name="pref_enable_5nd_dash">Enable dashboard service</string>
    <string name="num_screens">Number of dashboards to display</string>
    <string name="dashboards">Dashboards</string>
    <string name="custom_script">Unit conversion</string>
    <string name="formulas">Formulas</string>
    <string name="expressionDocumentation">View Documentation</string>
</resources>