<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/formulas"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/custom_script"/>

<EditText
    android:id="@+id/text_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/openDocumentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expressionDocumentation" />

</androidx.appcompat.widget.LinearLayoutCompat>
